no-jira: more cautiously wait for TinyMCE in edit panels